# lumen

./: .gitignore  Makefile  check_sdlgfx.py  demo.py  directives.txt  profile_dashboard.py  profile_infinite_scroll.py  pyproject.toml  requirements.txt
doc/: README.md  concepts.md  events.md  examples.md  layers.md  layouts.md  primitives.md
examples/: benchmark_rects.py  benchmark_scroll.py  dashboard_charts_demo.py  dashboard_demo.py  demo.py  demo_flexbox.py  demo_input.py  event_demo.py  fake_wikipedia_demo.py  hover_animation_demo.py  image_demo.py  image_rounded_demo.py  infinite_scroll_demo.py  layout_demo.py  markdown_journal_demo.py  quadtree_benchmark.py  repro_flicker.py  simple_dynamic_chart.py  text_demo.py
scripts/: trigger_screenshot.py
src/sdl_gui/: context.py  core.py  exceptions.py  markdown.py  text_utils.py  utils.py
tests/: test_color.py  test_context.py  test_crash_repro.py  test_drag_logic.py  test_input_advanced.py  test_input_primitive.py  test_input_robustness.py  test_input_sota.py  test_multiline_nav.py  test_multiline_selection.py  test_primitives.py
tests/integration/: app.py  benchmark_rects.py  benchmark_scroll.py  test_suite.py  test_vector_debug.py  test_visual_rendering.py
tests/sdl_gui/: test_display_list_optimization.py
tests/test_sdl_gui/: test_base_primitive.py  test_base_primitive_events.py  test_core.py  test_exceptions.py  test_hbox.py  test_hit_test.py  test_layer.py  test_markdown.py  test_padding_margin.py  test_percentage.py  test_rectangle.py  test_responsive_text.py  test_rich_text.py  (+9 more)
tools/: debug_client.py
(+45 files in other folders)
